# Speech-Defect-Detection-System

./: .env.example  .gitignore  LICENSE  README.md  backend.Dockerfile  client.Dockerfile  compose.yaml  pyproject.toml
Backend/app/: main.py
Backend/app/api/: models.py
Backend/app/api/v1/: api_route.py
Backend/app/services/: model_loader.py  preprocessing.py
Backend/data/: svm_model.pkl
Client/: app_client.py  inference_page.py  run.py
DLModels/: cnn.ipynb  cnn.md  cnn.pth
MLModels/: mlmodels.ipynb  mlmodels.md  scaler.pkl
Tools/: logger_config.py
eda/: EDA.ipynb  EDA.md
